--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	},
 	"publisher": "RichardLuo",
 	"description": "Bring frosted glass menu (like windows acrylic or mac os) to your vscode!",
-	"version": "0.5.2",
+	"version": "0.5.3",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/RichardLuo0/vscode-frosted-glass-theme"
@@ -90,7 +90,7 @@
 		"glob": "^7.1.6",
 		"mocha": "^8.1.3",
 		"typescript": "^4.0.2",
-		"vscode-test": "^1.4.0"
+		"@vscode/test-electron": "^1.4.0"
 	},
 	"dependencies": {
 		"@types/uuid": "^8.3.0",
