--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	},
 	"publisher": "RichardLuo",
 	"description": "Bring frosted glass menu (like windows acrylic or mac os) to your vscode!",
-	"version": "0.5.4",
+	"version": "0.5.5",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/RichardLuo0/vscode-frosted-glass-theme"
@@ -80,18 +80,14 @@
 		"test": "node ./out/test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.50.0",
-		"@types/glob": "^7.1.3",
-		"@types/mocha": "^8.0.0",
-		"@types/node": "^12.11.7",
+		"@types/node": "^12.20.37",
 		"@types/uuid": "^8.3.0",
-		"eslint": "^7.9.0",
-		"@typescript-eslint/eslint-plugin": "^4.1.1",
-		"@typescript-eslint/parser": "^4.1.1",
-		"glob": "^7.1.6",
-		"mocha": "^8.1.3",
-		"typescript": "^4.0.2",
-		"@vscode/test-electron": "^1.4.0"
+		"@types/vscode": "1.50.0",
+		"@typescript-eslint/eslint-plugin": "^4.33.0",
+		"@typescript-eslint/parser": "^4.33.0",
+		"@vscode/test-electron": "^1.6.2",
+		"eslint": "^7.32.0",
+		"typescript": "^4.4.4"
 	},
 	"dependencies": {
 		"uuid": "^8.3.1"
