chore: change extensionKind; change README.md
Change extensionKind so that the extension will keep enabled when connecting to a remote server

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
 	"categories": [
 		"Themes"
 	],
+	"extensionKind": [
+		"ui"
+	],
 	"activationEvents": [
 		"onCommand:frosted-glass-theme.enableTheme",
 		"onCommand:frosted-glass-theme.disableTheme",
