--- a/package.json
+++ b/package.json
@@ -33,19 +33,19 @@
 		"commands": [
 			{
 				"command": "frosted-glass-theme.enableTheme",
-				"title": "Enable Frosted Glass Theme"
+				"title": "Frosted Glass Theme: Enable"
 			},
 			{
 				"command": "frosted-glass-theme.disableTheme",
-				"title": "Disable Frosted Glass Theme"
+				"title": "Frosted Glass Theme: Disable"
 			},
 			{
 				"command": "frosted-glass-theme.applyConfig",
-				"title": "Apply Frosted Glass Theme Configuration"
+				"title": "Frosted Glass Theme: Apply Configuration"
 			},
 			{
 				"command": "frosted-glass-theme.openCSS",
-				"title": "Open Frosted Glass Theme CSS"
+				"title": "Frosted Glass Theme: Open CSS"
 			}
 		],
 		"configuration": {
@@ -84,16 +84,16 @@
 		"package": "vsce package"
 	},
 	"devDependencies": {
-		"@types/node": "^18.0.0",
-		"@types/uuid": "^8.3.4",
-		"@types/vscode": "1.50.0",
-		"@typescript-eslint/eslint-plugin": "^5.28.0",
-		"@typescript-eslint/parser": "^5.28.0",
-		"@vscode/test-electron": "^2.1.4",
-		"eslint": "^8.17.0",
-		"typescript": "^4.7.3"
+		"@types/node": "^18.15.11",
+		"@types/uuid": "^9.0.1",
+		"@types/vscode": "1.77.0",
+		"@typescript-eslint/eslint-plugin": "^5.57.0",
+		"@typescript-eslint/parser": "^5.57.0",
+		"@vscode/test-electron": "^2.3.0",
+		"eslint": "^8.37.0",
+		"typescript": "^5.0.3"
 	},
 	"dependencies": {
-		"uuid": "^8.3.2"
+		"uuid": "^9.0.0"
 	}
 }
