build: replace node version to latest in github action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
       
       - uses: actions/setup-node@v1
         with:
-          node-version: 14
+          node-version: latest
 
       - name: Install the dependencies
         run: npm i
