feat: display a message when config has been changed

--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
 	"extensionKind": [
 		"ui"
 	],
-	"activationEvents": [],
+	"activationEvents": [
+		"onCommand:workbench.action.openSettings"
+	],
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
