--- a/package.json
+++ b/package.json
@@ -67,6 +67,11 @@
 					"type": "string",
 					"default": "300ms",
 					"description": "CSS transition"
+				},
+				"frosted-glass-theme.animation": {
+					"type": "string",
+					"default": "300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards dropdown",
+					"description": "CSS animation"
 				}
 			}
 		}
