--- a/package.json
+++ b/package.json
@@ -46,37 +46,43 @@
 			}
 		],
 		"configuration": {
-			"title": "Frosted Glass Theme Configuration",
+			"title": "Frosted Glass Theme",
 			"properties": {
 				"frosted-glass-theme.backdropFilter": {
 					"type": "string",
+					"order": 0,
 					"default": "blur(30px)",
 					"description": "Menu backdrop filter"
 				},
 				"frosted-glass-theme.backgroundColor": {
 					"type": "string",
+					"order": 1,
 					"default": "",
-					"description": "Menu background color. Use css color. This will overwrite backgroundOpacity. Leave this blank to use backgroundOpacity"
+					"markdownDescription": "Menu background color. Use css color. This will overwrite `#frosted-glass-theme.backgroundOpacity#`. Leave this blank to use `#frosted-glass-theme.backgroundOpacity#`"
 				},
 				"frosted-glass-theme.backgroundOpacity": {
 					"type": "number",
+					"order": 2,
 					"default": 0.4,
 					"description": "Menu background opacity. This will blend into your theme color"
 				},
 				"frosted-glass-theme.transition": {
 					"type": "string",
+					"order": 3,
 					"default": "300ms",
 					"description": "CSS transition"
 				},
 				"frosted-glass-theme.animation.menu": {
 					"type": "string",
+					"order": 4,
 					"default": "300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards dropdown",
-					"description": "CSS animation"
+					"markdownDescription": "CSS animation for menu. Set to blank or `none` to disable the animation"
 				},
 				"frosted-glass-theme.animation.dialog": {
 					"type": "string",
+					"order": 5,
 					"default": "300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards zoomIn",
-					"description": "CSS animation"
+					"markdownDescription": "CSS animation for dialog. Set to blank or `none` to disable the animation"
 				}
 			}
 		}
