chore: github actions: change to @vscode/vsce

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
         run: npm i
 
       - name: Install vsce
-        run: npm i -g vsce
+        run: npm i -g @vscode/vsce
 
       - name: Publish
         run: vsce publish -p ${{ secrets.VS_MARKETPLACE_TOKEN }}
