--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
 	"extensionKind": [
 		"ui"
 	],
+	"capabilities": {
+		"untrustedWorkspaces": {
+			"supported": true
+		}
+	},
 	"activationEvents": [
 		"onCommand:workbench.action.openSettings"
 	],
