--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"mac os",
 		"animation",
 		"transparent",
-		"theme"
+		"theme",
+		"blur"
 	],
 	"extensionKind": [
 		"ui"
@@ -111,14 +112,14 @@
 		"package": "vsce package"
 	},
 	"devDependencies": {
-		"@types/node": "^20.9.0",
+		"@types/node": "^20.10.5",
 		"@types/uuid": "^9.0.7",
 		"@types/vscode": "1.50.0",
-		"@typescript-eslint/eslint-plugin": "^6.10.0",
-		"@typescript-eslint/parser": "^6.10.0",
-		"@vscode/test-electron": "^2.3.6",
-		"eslint": "^8.53.0",
-		"typescript": "^5.2.2"
+		"@typescript-eslint/eslint-plugin": "^6.16.0",
+		"@typescript-eslint/parser": "^6.16.0",
+		"@vscode/test-electron": "^2.3.8",
+		"eslint": "^8.56.0",
+		"typescript": "^5.3.3"
 	},
 	"dependencies": {
 		"@vscode/sudo-prompt": "^9.3.1",
