--- a/package.json
+++ b/package.json
@@ -81,21 +81,25 @@
 					"default": 0.4,
 					"description": "Menu background opacity. This will blend into your theme color"
 				},
+				"frosted-glass-theme.selectionOpacity": {
+					"type": "number",
+					"order": 3,
+					"default": 1,
+					"description": "Menu selection opacity. This will blend into your theme color"
+				},
 				"frosted-glass-theme.transition": {
 					"type": "string",
-					"order": 3,
+					"order": 4,
 					"default": "300ms",
 					"description": "CSS transition"
 				},
 				"frosted-glass-theme.animation.menu": {
 					"type": "string",
-					"order": 4,
 					"default": "300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards fgtDropdown",
 					"markdownDescription": "CSS animation for menu. Set to blank or `none` to disable the animation"
 				},
 				"frosted-glass-theme.animation.dialog": {
 					"type": "string",
-					"order": 5,
 					"default": "300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards fgtZoomIn",
 					"markdownDescription": "CSS animation for dialog. Set to blank or `none` to disable the animation"
 				}
