--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	},
 	"publisher": "RichardLuo",
 	"description": "Bring frosted glass menu (like windows acrylic or mac os) to your vscode!",
-	"version": "0.6.15",
+	"version": "0.6.16",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/RichardLuo0/vscode-frosted-glass-theme"
@@ -27,7 +27,8 @@
 		"animation",
 		"transparent",
 		"theme",
-		"blur"
+		"blur",
+		"menu"
 	],
 	"extensionKind": [
 		"ui"
