--- a/package.json
+++ b/package.json
@@ -61,54 +61,92 @@
 				"title": "Frosted Glass Theme: Open CSS"
 			}
 		],
-		"configuration": {
-			"title": "Frosted Glass Theme",
-			"properties": {
-				"frosted-glass-theme.backdropFilter": {
-					"type": "string",
-					"order": 0,
-					"default": "blur(30px)",
-					"description": "Menu backdrop filter"
-				},
-				"frosted-glass-theme.backgroundColor": {
-					"type": "string",
-					"order": 1,
-					"default": "",
-					"markdownDescription": "Menu background color. Use css color. This will overwrite `#frosted-glass-theme.opacity.menu#`. Leave this blank to use `#frosted-glass-theme.opacity.menu#`"
-				},
-				"frosted-glass-theme.transition": {
-					"type": "string",
-					"order": 2,
-					"default": "300ms",
-					"description": "CSS transition"
-				},
-				"frosted-glass-theme.opacity.menu": {
-					"type": "number",
-					"default": 0.4,
-					"description": "Menu background opacity. This will blend into your theme color"
-				},
-				"frosted-glass-theme.opacity.selection": {
-					"type": "number",
-					"default": 1,
-					"description": "Menu selection opacity. This will blend into your theme color"
-				},
-				"frosted-glass-theme.opacity.panelHeader": {
-					"type": "number",
-					"default": 0.4,
-					"description": "Panel header opacity. This will blend into your theme color"
-				},
-				"frosted-glass-theme.animation.menu": {
-					"type": "string",
-					"default": "300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards fgtDropdown",
-					"markdownDescription": "CSS animation for menu. Set to blank or `none` to disable the animation"
-				},
-				"frosted-glass-theme.animation.dialog": {
-					"type": "string",
-					"default": "300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards fgtZoomIn",
-					"markdownDescription": "CSS animation for dialog. Set to blank or `none` to disable the animation"
+		"configuration": [
+			{
+				"title": "General",
+				"properties": {
+					"frosted-glass-theme.backdropFilter": {
+						"type": "string",
+						"order": 0,
+						"default": "blur(30px)",
+						"description": "Menu backdrop filter"
+					},
+					"frosted-glass-theme.backgroundColor": {
+						"type": "string",
+						"order": 1,
+						"default": "",
+						"markdownDescription": "Menu background color. Use css color. This will overwrite `#frosted-glass-theme.opacity.menu#`. Leave this blank to use `#frosted-glass-theme.opacity.menu#`"
+					},
+					"frosted-glass-theme.transition": {
+						"type": "string",
+						"order": 2,
+						"default": "300ms",
+						"description": "CSS transition"
+					}
+				}
+			},
+			{
+				"title": "Opacity",
+				"properties": {
+					"frosted-glass-theme.opacity.menu": {
+						"type": "number",
+						"default": 0.4,
+						"description": "Menu background opacity. This will blend into your theme color"
+					},
+					"frosted-glass-theme.opacity.selection": {
+						"type": "number",
+						"default": 1,
+						"description": "Menu selection opacity. This will blend into your theme color"
+					},
+					"frosted-glass-theme.opacity.panelHeader": {
+						"type": "number",
+						"default": 0.4,
+						"description": "Panel header opacity. This will blend into your theme color"
+					}
+				}
+			},
+			{
+				"title": "Animation",
+				"properties": {
+					"frosted-glass-theme.animation.menu": {
+						"type": "string",
+						"default": "300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards fgtDropdown",
+						"markdownDescription": "CSS animation for menu. Set to blank or `none` to disable the animation"
+					},
+					"frosted-glass-theme.animation.dialog": {
+						"type": "string",
+						"default": "300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards fgtZoomIn",
+						"markdownDescription": "CSS animation for dialog. Set to blank or `none` to disable the animation"
+					}
+				}
+			},
+			{
+				"title": "Reveal Effect",
+				"properties": {
+					"frosted-glass-theme.revealEffect.enabled": {
+						"type": "boolean",
+						"default": true,
+						"order": 0,
+						"description": "Enable reveal effect"
+					},
+					"frosted-glass-theme.revealEffect.opacity": {
+						"type": "number",
+						"default": 0.1,
+						"description": "Reveal effect gradient opacity"
+					},
+					"frosted-glass-theme.revealEffect.gradientSize": {
+						"type": "number",
+						"default": 150,
+						"description": "Reveal effect gradient size"
+					},
+					"frosted-glass-theme.revealEffect.clickEffect": {
+						"type": "boolean",
+						"default": true,
+						"description": "Enable click effect"
+					}
 				}
 			}
-		}
+		]
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run compile",
@@ -131,6 +169,7 @@
 	},
 	"dependencies": {
 		"@vscode/sudo-prompt": "^9.3.1",
+		"fluent-reveal-effect": "^3.0.11",
 		"uuid": "^9.0.1"
 	}
 }
