--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es6",
+		"module": "CommonJS",
+		"target": "ES6",
 		"outDir": "out",
 		"lib": [
 			"es6"
@@ -16,6 +16,7 @@
 		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
 	},
 	"exclude": [
+		"src-inject",
 		"node_modules",
 		".vscode-test"
 	]
