--- a/package.json
+++ b/package.json
@@ -102,20 +102,25 @@
 						"default": 1,
 						"description": "Menu selection opacity. This will blend into your theme color"
 					},
-					"frosted-glass-theme.opacity.panelHeader": {
-						"type": "number",
-						"default": 0.4,
-						"description": "Panel header opacity. This will blend into your theme color"
-					},
 					"frosted-glass-theme.opacity.border": {
 						"type": "number",
 						"default": 0.4,
 						"description": "Border opacity. This will blend into your theme color"
 					},
+					"frosted-glass-theme.opacity.separator": {
+						"type": "number",
+						"default": 0.75,
+						"description": "Menu separator opacity. This will blend into your theme color"
+					},
 					"frosted-glass-theme.opacity.minimap": {
 						"type": "number",
 						"default": 0.4,
 						"description": "Minimap opacity."
+					},
+					"frosted-glass-theme.opacity.panelHeader": {
+						"type": "number",
+						"default": 0.4,
+						"description": "Panel header opacity. This will blend into your theme color"
 					}
 				}
 			},
