feat: add `borderRadius` settings

--- a/src-inject/config.json
+++ b/src-inject/config.json
@@ -19,5 +19,10 @@
     "opacity": 0.1,
     "gradientSize": 200,
     "clickEffect": true
+  },
+  "borderRadius": {
+    "menu": "",
+    "menuItem": "",
+    "suggestWidget": ""
   }
 }
