--- a/package.json
+++ b/package.json
@@ -164,6 +164,26 @@
             "description": "Enable click effect"
           }
         }
+      },
+      {
+        "title": "Border Radius",
+        "properties": {
+          "frosted-glass-theme.borderRadius.menu": {
+            "type": "string",
+            "default": "",
+            "description": "Menu border radius (with unit). Set to blank to use default"
+          },
+          "frosted-glass-theme.borderRadius.menuItem": {
+            "type": "string",
+            "default": "",
+            "description": "Menu item border radius (with unit). Set to blank to use default"
+          },
+          "frosted-glass-theme.borderRadius.suggestWidget": {
+            "type": "string",
+            "default": "",
+            "description": "Editor widget border radius (with unit). Set to blank to use default"
+          }
+        }
       }
     ]
   },
@@ -180,12 +200,12 @@
     "@types/node": "^20.12.7",
     "@types/uuid": "^9.0.8",
     "@types/vscode": "1.64.0",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "@vscode/test-electron": "^2.3.9",
     "esbuild": "0.20.2",
     "eslint": "^8.57.0",
-    "generate-license-file": "^3.2.0",
+    "generate-license-file": "^3.4.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
