--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 			"es6"
 		],
 		"esModuleInterop": true,
+    "resolveJsonModule": true,
 		"sourceMap": true,
 		"rootDir": "src",
 		"strict": true /* enable all strict type-checking options */
