--- a/src-inject/config.json
+++ b/src-inject/config.json
@@ -23,5 +23,12 @@
     "menu": "",
     "menuItem": "",
     "suggestWidget": ""
+  },
+  "fakeMica": {
+    "enabled": false,
+    "url": "C:/Windows/Web/Wallpaper/Windows/img0.jpg",
+    "filter": "var(--fgt-backdrop-filter) brightness(30%)",
+    "titlebarHack": true,
+    "titlebarOpacity": 0.6
   }
 }
