--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI for pr testing
+name: CI for testing
 
 # Controls when the workflow will run
 on:
