--- a/inject/config.json
+++ b/inject/config.json
@@ -27,7 +27,8 @@
   "fakeMica": {
     "enabled": false,
     "url": "C:/Windows/Web/Wallpaper/Windows/img0.jpg",
-    "filter": "var(--fgt-backdrop-filter) brightness(30%)",
+    "filter": "var(--fgt-backdrop-filter)",
+    "filterDark": "var(--fgt-backdrop-filter) brightness(30%)",
     "titlebarFix": true,
     "titlebarOpacity": 0.6,
     "listBackgroundFix": true,
