--- a/src-inject/config.json
+++ b/src-inject/config.json
@@ -28,6 +28,7 @@
     "enabled": false,
     "url": "C:/Windows/Web/Wallpaper/Windows/img0.jpg",
     "filter": "var(--fgt-backdrop-filter)",
+    "filterDark": "var(--fgt-backdrop-filter) brightness(30%)",
     "titlebarFix": true,
     "titlebarOpacity": 0.6,
     "listBackgroundFix": true,
