--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "publisher": "RichardLuo",
   "description": "Bring frosted glass menu (like windows acrylic or mac os) to your vscode!",
-  "version": "0.7.10",
+  "version": "0.7.11",
   "repository": {
     "type": "git",
     "url": "https://github.com/RichardLuo0/vscode-frosted-glass-theme"
@@ -22,13 +22,19 @@
   ],
   "keywords": [
     "acrylic",
-    "fluent design",
-    "mac os",
+    "fluent",
+    "mac",
     "animation",
     "transparent",
     "theme",
     "blur",
-    "menu"
+    "effect",
+    "menu",
+    "mica",
+    "windows",
+    "windows11",
+    "windows10",
+    "winui"
   ],
   "extensionKind": [
     "ui"
