--- a/src-inject/tsconfig.json
+++ b/src-inject/tsconfig.json
@@ -7,8 +7,9 @@
     "rootDir": ".",
     "baseUrl": "..",
     "lib": [
-      "DOM"
+      "DOM",
+      "ES2021"
     ]
   },
-  "exclude":[]
+  "exclude": []
 }
