--- a/inject/config.json
+++ b/inject/config.json
@@ -3,7 +3,11 @@
     "default": "url(#fgt-acrylic-{key})",
     "minimap": "url(#fgt-mica)",
     "decorationsOverviewRuler": "url(#fgt-mica)",
-    "terminalOverlay": "url(#fgt-mica)"
+    "terminalOverlay": "url(#fgt-mica)",
+    "editorStickyScroll": {
+      "filter": "url(#fgt-mica)",
+      "disableBackgroundColor": false
+    }
   },
   "transition": "300ms",
   "svg": [
@@ -12,7 +16,6 @@
   "tintSvg": [
     "../resource/acrylic.svg"
   ],
-  "disableBackgroundColor": true,
   "variable": {
     "fgt-luminosity-opacity": "45%",
     "fgt-mica-luminosity": "hsl(0, 0%, 80%)",
@@ -24,12 +27,10 @@
     "fgt-mica-brightness": "brightness(30%)"
   },
   "opacity": {
-    "background": 0.4,
     "selection": 1,
     "border": 0.4,
     "separator": 0.7,
-    "minimap": 0.4,
-    "panelHeader": 0.4
+    "minimap": 0.4
   },
   "animation": {
     "menu": "300ms cubic-bezier(0, 0.8, 0.2, 1) 0s 1 forwards fgtDropdown",
