--- a/src-inject/config.json
+++ b/src-inject/config.json
@@ -55,5 +55,8 @@
     "titlebarOpacity": 0.8,
     "listBackgroundFix": true,
     "editorBackgroundFix": true
+  },
+  "miscellaneous": {
+    "progressBarBehindSectionHeader": false
   }
 }
