fix: `fgt-mica` creates a fake luminosity

--- a/package.json
+++ b/package.json
@@ -81,13 +81,9 @@
             "order": 0,
             "default": {
               "default": "url(#fgt-acrylic-{key})",
-              "minimap": "url(#fgt-mica)",
-              "decorationsOverviewRuler": "url(#fgt-mica)",
-              "terminalOverlay": "url(#fgt-mica)",
-              "editorStickyScroll": {
-                "filter": "url(#fgt-mica)",
-                "disableBackgroundColor": false
-              }
+              "minimap": "blur(30px)",
+              "decorationsOverviewRuler": "blur(30px)",
+              "terminalOverlay": "blur(30px)"
             },
             "description": "The filter used for frosted glassed effect. Check README for detailed description."
           },
