--- a/package.json
+++ b/package.json
@@ -288,9 +288,9 @@
   "devDependencies": {
     "@types/node": "^22.2.0",
     "@types/uuid": "^10.0.0",
-    "@types/vscode": "1.64.0",
-    "@typescript-eslint/eslint-plugin": "^8.0.1",
-    "@typescript-eslint/parser": "^8.0.1",
+    "@types/vscode": "^1.64.0",
+    "@typescript-eslint/eslint-plugin": "^8.1.0",
+    "@typescript-eslint/parser": "^8.1.0",
     "@vscode/test-electron": "^2.4.1",
     "esbuild": "0.23.0",
     "eslint": "^9.9.0",
